--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,4 @@
-(A) Make  'location_types' changeble in the input
-(A) Use sqlite-like to save data
+(C) Use sqlite-like to save data
 (B) Force to rotate between tokens, not just the first who is available (implemented now)
 (A) Check tokens valid when load
 (A) Test and cover different fields https://developers.facebook.com/docs/marketing-api/targeting-specs/v2.8
